--- a/routes/vercel.json
+++ b/routes/vercel.json
@@ -3,14 +3,14 @@
   "name": "server",
   "builds": [
     {
-      "src": "api/index.js",
+      "src": "server/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "api/index.js"
+      "dest": "server/index.js"
     }
   ]
 }
