--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node backend/index.js",
+    "start": "node server/index.js",
     "dev": "nodemon backend/index.js",
     "seed": "node config/backend/seeder.js"
   },
@@ -22,6 +22,7 @@
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9",
+    "serverless-http": "^3.2.0",
     "streamifier": "^0.1.1"
   }
 }
