--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon backend/index.js",
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js",
     "seed": "node config/backend/seeder.js"
   },
   "keywords": [],
