--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
- {
+  {
   "version": 2,
   "name": "server",
   "builds": [
     {
       "src": "index.js",
-      "use": "@vercel/node",
-      "config": {"includeFiles": ["dist/**"] }
+      "use": "@vercel/node"
+    
     }
   ],
   "routes": [
